| Summary: | ASTERISK-25131: chan_pjsip: In-dialog authentication not handled. | ||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |
| Date Opened: | 2015-05-26 12:47:11 | Date Closed: | 2015-06-02 09:31:18 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_pjsip Resources/res_pjsip_session |
| Versions: | 13.3.2 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When the remote peer requires authentication for in-dialog requests then re-INVITEs to the peer cause the call to be disconnected and other in-dialog requests to the peer like MESSAGE just don't go through.
Example scenarios: Re-INVITE causes disconnect on incoming call because authentication is not handled. {noformat} Asterisk --- Peer <-- INVITE 200 OK --> <-- ACK INVITE --> <-- 401 Unauthorized ACK --> BYE --> <-- 200 OK {noformat} In-dialog MESSAGE during incoming call fails. {noformat} Asterisk --- Peer <-- INVITE 200 OK --> <-- ACK MESSAGE --> <-- 401 Unauthorized The current message is no longer tried to be sent. {noformat} Re-INVITE causes disconnect on outbound call because authentication is not handled. {noformat} Asterisk --- Peer INVITE --> <-- 401 Unauthorized ACK --> INVITE/w auth --> <-- 200 OK ACK --> INVITE --> <-- 401 Unauthorized ACK --> BYE --> <-- 200 OK {noformat} In-dialog MESSAGE during outgoing call actually succeeds. {noformat} Asterisk --- Peer INVITE --> <-- 401 Unauthorized ACK --> INVITE/w auth --> <-- 200 OK ACK --> MESSAGE --> <-- 401 Unauthorized MESSAGE/w auth --> <-- 200 OK {noformat} | ||
| Comments: | |||