res_pjsip_session: Fix in-dialog authentication.

When the remote peer requires authentication for in-dialog requests then
re-INVITEs to the peer cause the call to be disconnected and other
in-dialog requests to the peer like MESSAGE just don't go through.

* Made session_inv_on_tsx_state_changed() handle in-dialog authentication
for re-INVITEs and other methods.  Initial INVITEs cannot be handled here
because the INVITE transaction must be restarted earlier.

* Changed res/res_pjsip/pjsip_outbound_auth.c:outbound_auth() to only
handle initial outbound INVITEs.  Re-INVITEs cannot be handled here.  The
re-INVITE transaction is still in progress and the PJSIP library cannot
handle the overlapping INVITE transactions.  Other method types should
not be handled here as this code is only setup for outgoing calls while we
need to handle incoming and outgoing calls.

ASTERISK-25131 #close
Reported by: Richard Mudgett

Change-Id: I12bdd7ddccc819b4ce4b091e826d1e26334601b0